# stockholm-bostad-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  scraper.Dockerfile
bostad_scraper/: __main__.py  apartments.py  email_utils.py  filter.py  subscribers.py
bostad_scraper/email_templates/: apartments_email.jinja.html
example_configs/: subscribers.json
mysql/: init.sql
php_backend/: .env.example  Dockerfile  apartments.php  configure.php  db.php  get_subscribers.php  index.php  subscribers.php  sync_subscriber.php
php_backend/assets/: style.css
php_backend/includes/: apartments.php  email_verification.php  kommuner_och_stadsdelar.php  subscriber.php  subscribers.php
tests/: apartments.json  mocked_apartments.py  subscribers.json  test_email.py  test_filter.py  test_scraper.py  test_subscribers.py
